documents/workers/jobs/scripts/k8s/namespaces/bminer/ingress/bminer-backend-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/cors-allow-methods: POST,GET,OPTIONS
    ingress.kubernetes.io/enable-cors: "true"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"ingress.kubernetes.io/cors-allow-methods":"POST,GET,OPTIONS","ingress.kubernetes.io/enable-cors":"true","kubernetes.io/ingress.class":"nginx"},"name":"bminer-backend-staging","namespace":"bminer"},"spec":{"rules":[{"host":"bminer-api.corp.alt-chain.io","http":{"paths":[{"backend":{"serviceName":"bminer-backend-staging","servicePort":443},"path":"/"}]}}],"tls":[{"hosts":["bminer-api.corp.alt-chain.io"],"secretNa [...]
    kubernetes.io/ingress.class: nginx
  creationTimestamp: "2020-08-06T09:21:09Z"
  generation: 1
  name: bminer-backend-staging
  namespace: bminer
  resourceVersion: "89000356"
  selfLink: /apis/extensions/v1beta1/namespaces/bminer/ingresses/bminer-backend-staging
  uid: f7633246-3730-4eeb-9427-28bd2ce2fe97
spec:
  rules:
  - host: bminer-api.corp.alt-chain.io
    http:
      paths:
      - backend:
          serviceName: bminer-backend-staging
          servicePort: 443
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bminer-api.corp.alt-chain.io
    secretName: star-sso-alt-chain-io-tls-secret
status:
  loadBalancer:
    ingress:
    - hostname: a5be9b6c27b40494a99499f06f0e9b83-1328453264.us-west-2.elb.amazonaws.com
